--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -1,6 +1,7 @@
 @use '../../style/helpers' as * ;
 
 .skills {
+  overflow: hidden;
   &__wrapper {
     h3 {
       text-align: center;
